--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 <!--
 body { margin:0; padding:0; }
-#tutorial { /*width:100%; height:100%;*/ background-color:#000; }
+#tutorial { background-color:#000; }
 -->
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
